--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^3.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
+    "@radix-ui/react-slot": "^1.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
@@ -10,11 +16,15 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.0",
     "eslint-plugin-security": "^1.7.1",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.483.0",
     "mobx": "^6.12.0",
     "mobx-react": "^7.6.0",
+    "next-themes": "^0.4.6",
     "prettier": "^3.5.3",
     "process": "^0.11.10",
     "querystring": "^0.2.1",
@@ -22,9 +32,13 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.71.1",
     "stripe": "^14.21.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.14",
+    "tw-animate-css": "^1.2.4",
     "typescript": "^4.9.5",
     "url": "^0.11.3",
     "util": "^0.12.5",
