--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "querystring": "^0.2.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-big-calendar": "^1.11.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
