feat(training_page): Add graph to watch training information

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
-    "@mui/material": "^6.4.8",
+    "@mui/material": "^6.4.10",
+    "@mui/x-charts": "^7.28.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -32,6 +33,7 @@
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-big-calendar": "^1.11.1",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
